# gap_firmware

./: .gitignore  README.md
gap-groupe13/: README
gap-groupe13/stm32cubeide/: .cproject  .mxproject  .project  STM32F401RETX_FLASH.ld  gap_project.ioc  gap_project.launch
gap-groupe13/stm32cubeide/Core/Inc/: gapcli_cmd_callback.h  gapcom_fsm.h  gapcom_impl.h  log_manager.h  main.h  mpu60x0.h  powersave.h  selftest.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  version.h
gap-groupe13/stm32cubeide/Core/Inc/utils/: flash.h  uart.h
gap-groupe13/stm32cubeide/Core/Src/: gapcli_cmd_callback.c  gapclicmdcallback.c  gapclicmdcallback.h  gapcom_fsm.c  gapcom_impl.c  log_manager.c  main.c  mpu60x0.c  powersave.c  savemode.c  savemode.h  selftest.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  version.c
gap-groupe13/stm32cubeide/Core/Src/utils/: flash.c  uart.c
gap-groupe13/stm32cubeide/Debug/: gap_project.elf  gap_project.list  gap_project.map  makefile  objects.list  objects.mk
gap-groupe13/stm32cubeide/Debug/Core/Src/: gapcli_cmd_callback.cyclo  gapcli_cmd_callback.d  gapcli_cmd_callback.su  gapcom_fsm.cyclo  gapcom_fsm.d  gapcom_fsm.su  gapcom_impl.cyclo  gapcom_impl.d  gapcom_impl.su  log_manager.cyclo  log_manager.d  log_manager.su  main.cyclo  main.d  main.su  mpu60x0.d  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d
gap-groupe13/stm32cubeide/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_usart.d  subdir.mk
libgapcom-libgapcom-1.0.0-rc2/libgapcom/: .bumpversion.cfg  .clang-format  .gitmodules  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
libgapcom-libgapcom-1.0.0-rc2/libgapcom/gap-agents/: CMakeLists.txt  Makefile  cmake_install.cmake
libgapcom-libgapcom-1.0.0-rc2/libgapcom/gap-agents/src/: communicator.h  communicator_impl_client.h  communicator_impl_server.h  communicator_impl_uart_client_linux.c  communicator_impl_uart_client_win32.c  gapcli.c  log.h  options.c  options.h  utils.h
libgapcom-libgapcom-1.0.0-rc2/libgapcom/gap-com/: CMakeLists.txt  Makefile  cmake_install.cmake
libgapcom-libgapcom-1.0.0-rc2/libgapcom/gap-com/include/gapcom/: gapcom.h  gapcom_client.h  gapcom_server.h
libgapcom-libgapcom-1.0.0-rc2/libgapcom/gap-com/proto/: gap.options  gap.proto
libgapcom-libgapcom-1.0.0-rc2/libgapcom/gap-com/src/: gapcom.c  gapcom_client.c  gapcom_core.c  gapcom_core.h  gapcom_server.c  log.h
libgapcom-libgapcom-1.0.0-rc2/libgapcom/gap-tinyframe/: CMakeLists.txt  Makefile  cmake_install.cmake
libgapcom-libgapcom-1.0.0-rc2/libgapcom/host-tools/: chocolatey.config  generate_libgapcom_full_src_archive  requirements.txt
libgapcom-libgapcom-1.0.0-rc2/libgapcom/nanopb/: Makefile  cmake_install.cmake  nanopb-config-version.cmake
libgapcom-libgapcom-1.0.0-rc2/libgapcom/prebuilt/darwin-arm64/: gapcli
libgapcom-libgapcom-1.0.0-rc2/libgapcom/prebuilt/linux-amd64/: gapcli
